--- a/style.css
+++ b/style.css
@@ -13,5 +13,69 @@ html {
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
   background-color: #222;
-  color: greenyellow;
+  color: rgb(27, 27, 27);
+  box-sizing: border-box;
+}
+
+*,
+*:after,
+*:before{
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
+}
+.Header,
+.Main,
+.Footer{
+border: thin solid greenyellow;
+margin-bottom: 1rem;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.Main{
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  grid-template-rows: repeat(2, auto);
+  grid-template-areas: 'content sidebar'
+                       'other sidebar';
+  grid-gap: 1rem;
+}
+
+.Main > *{
+  background-color: #ccc;
+  padding: 1rem;
+}
+.Content{
+  grid-area: content;
+ 
+}
+
+.Content hr{
+  border: thick dotted greenyellow;
+  margin: 1rem auto;
+  width: 80%;
+}
+
+.Sidebar {
+  grid-area: sidebar;
+}
+
+.Other{
+  grid-area: other;
+}
+
+.Widget, 
+.Pagination{
+  background-color: #AAA;
+  margin-bottom: 2rem;
+}
+
+.Error404{
+  font-size: 5vw;
+  font-weight: bold;
+  text-align: center;
 }
